fix the piece shifting issue with No-Break Space (NBSP) Unicode Character.

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
 }
 
 .piece {
-  font-size: 15px;
   text-align: center;
   display: inline-block;
   width: 50px;
